# mri-ccv

./: .gitignore  README.md  main.py  mri_cae.ipynb  mri_cnn2.ipynb  pyproject.toml
models/: models.py
utils/: data_class.py  my_trainer.py
